--- a/kafka-demo-producer/Dockerfile
+++ b/kafka-demo-producer/Dockerfile
@@ -10,7 +10,7 @@ RUN mvn -f /home/app/pom.xml clean package
 #
 # Package stage
 #
-FROM openjdk:11-jre-slim
+FROM registry.access.redhat.com/ubi8/openjdk-11:1.14-3
 COPY --from=build /home/app/target/kafka-demo-producer-0.1.jar /usr/local/lib/kafka-demo-producer-0.1.jar
 
 EXPOSE 8080
