--- a/kafka-demo-producer/Dockerfile
+++ b/kafka-demo-producer/Dockerfile
@@ -1,7 +1,7 @@
 #
 # Build stage
 #
-FROM maven:3.6.0-jdk-11-slim AS build
+FROM registry.access.redhat.com/ubi8/openjdk-11:1.14-3 AS build
 COPY src /home/app/src
 COPY pom.xml /home/app
 RUN mvn -f /home/app/pom.xml clean package 
